add bio for Cindy

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -598,6 +598,11 @@ Then write a lot of code.</p>
                   <p>At Imgix, our multitiered caching layer forms one of the most important components of our real­time image processing and delivery service.</p>
                   <p>Hwyman is the origin cache that we built using Go.</p>
                   <p>While the talk will shed some light on our architecture and what necessitated this system in the first place, the main thrust of the talk will be about our experience introducing the first Go based service at a very small company.</p>
+		  <div class="speaker-bio">
+		    <p>Cindy learned Go in the fall of 2015 and currently work at Imgix, a real time image processing and image CDN service where she uses Go to build components for their caching layer.</p>
+		    <p>In her past life Cindy has been a Python hacker where she remembers fixing unicode errors for the most part, and prior to that worked a lot with C/C++, and believes Go combines the best of both worlds.</p>
+		    <p>Cindy lives in San Francisco where you're most likely to find her at one of the many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop.</p>
+		    <p>Cindy helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p>
                 </div>
               </div>
             </div>
