correct José Carlos Nieto's name

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -166,7 +166,7 @@
                 </div>
     
                 <div class="speaker-description col-md-9">
-                  <h2>José Carlos</h2>
+                  <h2>José Carlos Nieto</h2>
                   <span class="sub">Go Mobile as the backbone of Lantern for Android</span>
                   <p>Lantern is a circumvention tool that people can use to access the Open Internet without restrictions. Lantern uses Go on its desktop client, server infrastructure and on its Lantern Mobile application for phones.</p>
                   <p>We'll focus on Lantern Mobile: this talk begins with our experiences working with Go Mobile and ends on a list of gotchas and suggestions on how can you start writing backends for mobile apps as well.</p>
