update bio and abstract for cindy

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -595,14 +595,12 @@ Then write a lot of code.</p>
                 <div class="speaker-description col-md-9">
                   <h2>Cindy Sridharan</h2>
                   <span class="sub">Hwyman, a building an origin cache for images</span>
-                  <p>At Imgix, our multitiered caching layer forms one of the most important components of our real­time image processing and delivery service.</p>
-                  <p>Hwyman is the origin cache that we built using Go.</p>
-                  <p>While the talk will shed some light on our architecture and what necessitated this system in the first place, the main thrust of the talk will be about our experience introducing the first Go based service at a very small company.</p>
+		  <p>At Imgix, our multitiered caching layer forms one of the most important components of our real­time image processing and delivery service.Hwyman is the origin cache that we built using Go. The talk will shed light on what necessitated the system in the first place and the architecture, the libraries we had to write ourselves such as a ragel bagel based cache control field parser, how several of the language’s inbuilt constructs, newer features (like the library introduced in 1.5 which helped us do our own dns resolutions that helped us replace nginx ‘s own resolver in the old architecture) well as the tooling were used to design, implement and test our cache filling, cache eviction and purging logic, and more interestingly, our experience ‘productionizing this’, debugging difficult to pin down goroutine and filedescriptor leaks, tuning our system to handle disparate traffic patterns, how we evaluated performance pre and post ­production, the mistakes we made, challenges we faced and lessons we learned building this.</p>
 		  <div class="speaker-bio">
 		    <p>Cindy learned Go in the fall of 2015 and currently work at Imgix, a real time image processing and image CDN service where she uses Go to build components for their caching layer.</p>
-		    <p>In her past life Cindy has been a Python hacker where she remembers fixing unicode errors for the most part, and prior to that worked a lot with C/C++, and believes Go combines the best of both worlds.</p>
-		    <p>Cindy lives in San Francisco where you're most likely to find her at one of the many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop.</p>
-		    <p>Cindy helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p>
+		    <p>In her past life she worked with Python where she remembers fixing unicode errors for the most part, and prior to that worked with C/C++, and believes Go combines the best of both worlds.</p>
+		    <p>She lives in San Francisco where you're most likely to find her at one of the many, many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop. She helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p
+		  </div>
                 </div>
               </div>
             </div>
