fixed html typo

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -599,8 +599,7 @@ Then write a lot of code.</p>
 		  <div class="speaker-bio">
 		    <p>Cindy learned Go in the fall of 2015 and currently work at Imgix, a real time image processing and image CDN service where she uses Go to build components for their caching layer.</p>
 		    <p>In her past life she worked with Python where she remembers fixing unicode errors for the most part, and prior to that worked with C/C++, and believes Go combines the best of both worlds.</p>
-		    <p>She lives in San Francisco where you're most likely to find her at one of the many, many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop. She helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p
-		  </div>
+		    <p>She lives in San Francisco where you're most likely to find her at one of the many, many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop. She helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p>
                 </div>
               </div>
             </div>
