--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -608,7 +608,7 @@ Then write a lot of code.</p>
               <div class="speaker-with-bio">
                 <div class="speaker col-md-3">
                   <div class="image-holder">
-                    <img class="background-image" alt="Speaker" src="2016/img/speakers/placeholder.jpg">
+                    <img class="background-image" alt="Speaker" src="2016/img/speakers/george-tankersley.jpeg">
                     <div class="hover-state text-center preserve3d">
                     </div>
                   </div>
