add comcast as sponsor, and replace hashicorp logo

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -940,10 +940,10 @@ Then write a lot of code.</p>
 
             <div class="row">
               <div class="col-sm-12 silver-sponsors">
-                <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 text-center">
+                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
                   <div class="sponsor">
                     <a href="https://www.hashicorp.com/">
-                      <img alt="HashiCorp" src="2016/img/sponsors/silver/hashicorp.png">
+                      <img alt="HashiCorp" src="2016/img/sponsors/silver/hashicorp.png" style="max-width: 120px">
                     </a>
                   </div>
                 </div>
@@ -968,6 +968,14 @@ Then write a lot of code.</p>
                   <div class="sponsor">
                     <a href="http://www.iron.io/">
                       <img alt="IronIO" src="2016/img/sponsors/silver/ironio.png" style="margin-top: -10px; max-width: 85px;">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.comcast.com/">
+                      <img alt="Comcast" src="2016/img/sponsors/silver/comcast.png" style="max-width: 180px; margin-top: -5px">
                     </a>
                   </div>
                 </div>
