--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -1,16 +1,4 @@
-
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>GopherCon 2016</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="2016/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="2016/css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="2016/css/theme-gophercon.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="2016/font/styles.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
-    </head>
+  {{ partial "header.html" . }}
     <body>
     	<div class="loader">
     		<div class="strip-holder">
@@ -1010,51 +998,4 @@ Then write a lot of code.</p>
           </div>
         </section>
       </div>
-      <div class="footer-container">			
-        <footer class="short footer">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-7">
-                <span class="text-white">© Copyright 2016 GopherAcademy, LLC.<br>
-                </span>
-                <p class="small character-copyright">The Gopher character is based on the Go mascot designed by
-                  <a href="http://reneefrench.blogspot.com/" target="blank">Renee French</a>
-                  and copyrighted under the
-                  <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-                </p>
-              </div>
-        
-              <div class="col-sm-5 text-right">
-                <ul class="menu">
-                  <li><a href="https://gopheracademy.com/about/">About</a></li>
-                  <li><a href="https://golang.org/conduct">Code of Conduct</a></li>
-                  <li><a href="mailto:gophercon@gopheracademy.com">Contact</a></li>
-		  <li><a class="inner-link back-to-top" href="#top">Back To Top&nbsp;<i class="icon pe-7s-angle-up-circle"></i></a></li>
-		  <!--		  <li><a href="https://www.digitalocean.com/"><img height=39 width=140 src="/img/dohost.png" /></a></li> -->
- 
-               </ul>
-              </div>
-      
-            </div>
-          </div>
-        </footer>
-      </div>
-				
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
-      <script src="2016/js/bootstrap.min.js"></script>
-      <script src="2016/js/skrollr.min.js"></script>
-      <script src="2016/js/lightbox.min.js"></script>
-      <script src="2016/js/smooth-scroll.min.js"></script>
-      <script src="2016/js/scripts.js"></script>
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-40886074-1', 'auto');
-        ga('send', 'pageview');
-      </script>
-    </body>
-</html>
-				
+  {{ partial "footer.html" . }}
