--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -1,45 +1,14 @@
+
 <!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<meta content="GopherCon is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language." name="description">
-		<meta content="go, golang, gophercon, convention" name="keywords">
-		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-		<meta content="gophercon.com" name="author">
-		<meta content="GopherCon 2015" name="copyright">
-		<title>Gophercon 2015</title>
-		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/css/main.css" rel="stylesheet">
-		<link href="/css/animate.css" rel="stylesheet">
-	</head>
-	<body>
-
-		<header>
-      {{ partial "navbar.html" . }}
-
-			<div class="header-content">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 interior-header">
-
-              <a href="/"><img src="/images/gophercon-small.svg" alt="GopherCon 2015" title="GopherCon 2015" width="300" /></a>
-							<h1>Gophers of the world, Unite!</h1>
-							<p>GopherCon 2015 will be the largest gathering of Go developers ever. </p>
-						</div><!-- col-md-8 -->
-					</div><!-- row -->
-				</div><!-- container -->
-			</div><!-- header-content -->
-		</header>
-
-		<div class="sponsor-signUp">
-			<div class="container">
-				<div class="col-md-12">
-					<p>Interested in sponsoring?<a href="mailto:gophercon@gopheracademy.com" class="btn btn-orange" target="_blank" class="btn btn-orange">Get In Touch</a></p>
-				</div><!-- col-md-12 -->
-			</div><!-- container -->
-		</div><!-- sponsor-signUp -->
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>GopherCon 2016</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/2016/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="/2016/css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="/2016/css/theme-gophercon.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="/2016/font/styles.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
+    </head>
 
