--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -1,55 +1,128 @@
-<section class="home-sponsors content">
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1 text-center">
-      <h1>Thanks to Our Sponsors</h1>
-      <p class="subheader">Without their support this would not be possible</p>
+      <section class="sponsors">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <h1>Proudly sponsored by</h1>
+              </div>
+            </div>
 
-      <!---------- Diamond Sponsors ---------->
-        <div class="col-md-12 diamond">
-          {{ range .Site.Taxonomies.sponsors.diamond}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-        </div><!-- Diamond Sponsors End -->
-        <br /><br />
-        <!---------- Platinum Sponsors ---------->
-        <div class="col-md-12 platinum">
-          {{ range .Site.Taxonomies.sponsors.platinum}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-        </div><!-- Platinum Sponsors End -->
-        <br /><br />
-        <!---------- Gold Sponsors ---------->
-        <div class="col-md-12 gold">
-          {{ range .Site.Taxonomies.sponsors.gold}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-        </div><!-- Gold Sponsors End -->
-        <br /><br />
-        <!---------- Silver Sponsors ---------->
-        <div class="col-md-12 silver">
-          {{ range .Site.Taxonomies.sponsors.silver}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-        </div><!-- Silver Sponsors End -->
-        
-        <!---------- Bronze Sponsors ---------->
-        <div class="col-md-12 bronze">
-          {{ range .Site.Taxonomies.sponsors.bronze}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-	  </div><!-- Bronze Sponsors End -->
-	  <!---------- Additional Sponsors ---------->
-        <div class="col-md-12 bronze">
-          {{ range .Site.Taxonomies.sponsors.additional}}
-            <a href="{{.Page.Permalink}}"><img src="{{ .Page.Params.logo }}"></img></a>
-          {{ end }}
-          <div class="clearfix"></div>
-        </div><!-- Additional Sponsors End -->
-    </div>
-  </div>
-</section>
+            <div class="row">
+              <div class="col-sm-12 platinum-sponsors">
+                <div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.twitch.tv/">
+                      <img alt="Twitch" src="/2016/img/sponsors/platinum/twitch.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.compose.io/">
+                      <img alt="Compose" src="/2016/img/sponsors/platinum/compose.png" style="margin-left: 35px;">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.ardanlabs.com/">
+                      <img alt="Ardan labs" src="/2016/img/sponsors/platinum/ardan.png">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 gold-sponsors">
+                <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.minio.io/">
+                      <img alt="Minio" src="/2016/img/sponsors/gold/minio.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.datadoghq.com/">
+                      <img alt="Datadog" src="/2016/img/sponsors/gold/datadog.png">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 silver-sponsors">
+                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.hashicorp.com/">
+                      <img alt="HashiCorp" src="/2016/img/sponsors/silver/hashicorp.png" style="max-width: 120px">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.heroku.com/">
+                      <img alt="Heroku" src="/2016/img/sponsors/silver/heroku.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://influxdata.com/">
+                      <img alt="InfluxDB" src="/2016/img/sponsors/silver/influx.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.iron.io/">
+                      <img alt="IronIO" src="/2016/img/sponsors/silver/ironio.png" style="margin-top: -10px; max-width: 85px;">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.comcast.com/">
+                      <img alt="Comcast" src="/2016/img/sponsors/silver/comcast.png" style="max-width: 180px; margin-top: -5px">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 bronze-sponsors">
+                <div class="col-md-1 col-md-offset-5 col-sm-1 col-sm-offset-5 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.docker.com/">
+                      <img alt="Docker" src="/2016/img/sponsors/bronze/docker.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.crowdstrike.com/">
+                      <img alt="CrowdStrike" src="/2016/img/sponsors/bronze/crowdstrike.png">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <span>Interested in becoming a sponsor? <a href="/Gophercon2016Prospectus.pdf">Get in touch</a></span>
+              </div>
+            </div>
+          </div>
+        </section>
+
