--- a/themes/gophercon/layouts/section/speakers.html
+++ b/themes/gophercon/layouts/section/speakers.html
@@ -1,43 +1,94 @@
 {{ partial "header.html" . }}
 
+ <body>
 
-<main class="container generic">
-    <section class="row">
-        <div class="col-md-8">
-          <h2>2015 Speakers</h2>
-          {{ range .Data.Pages }}
+    	
+    	<a id="top"></a>
+				
+      <div class="nav-container"></div>
+      <div class="main-container">
+        <div class="row colors">
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+          <div class="col-xs-2"></div>
+        </div>
+
+        <section class="color-blocks">
+          <div class="color-block block-left col-md-6 col-sm-12"></div>
+          <div class="color-block block-right col-md-6 col-sm-12"></div>
+          
+          <div class="container">
             <div class="row">
-              <div class="col-md-3">
-                <img class="avatar img-rounded" src="{{.Params.speakerimage}}" alt="{{.LinkTitle}}" width="150" />
-                <div class="speaker-social">
-                  {{ with .Params.twitter }}
-                  <a href="{{.}}"><i class="fa fa-twitter"></i></a>
-                  {{ end }}
-                  {{ with .Params.github }}
-                  <a href="{{.}}"><i class="fa fa-github"></i></a>
-                  {{ end }}
-                  {{ with .Params.linkedin }}
-                  <a href="{{.}}"><i class="fa fa-linkedin"></i></a>
-                  {{ end }}
+              <a href="https://ti.to/gophercon/gophercon-2016" class="block-content">
+                <div class="col-md-2 col-sm-4 text-center">
+                  <i>
+                    <img class="icon" src="/2016/img/icons/Starred Ticket-70.png" width="65" style="margin-top: -12px">
+                  </i>
                 </div>
-              </div>
-              <div class="col-md-9">
-                <h3>{{.LinkTitle}} <br /><small>{{.Params.speakertitle}}</small></h3>
-                {{.Summary}}
-                <br/><br/>
-                {{ if .Truncated }}
-                <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
-                {{ end }}
-                <a href="{{ .Params.talk}}">View Talk</a><br/><br />
+              
+                <div class="col-md-4 col-sm-8">
+                  <h1>Need Tickets?</h1>
+                  <p>
+                    Get your tickets early and guarantee your entrance to the largest Go conference in the world.
+                  </p>
+                </div>
+              </a>
+              
+              <a href="/Gophercon2016Prospectus.pdf" class="block-content">
+                <div class="col-md-2 col-sm-4 text-center">
+                  <i>
+                    <img class="icon" src="/2016/img/icons/Handshake-70.png" width="60" style="margin-top: -12px">
+                  </i>
+                </div>
+              
+                <div class="col-md-4 col-sm-8">
+                  <h1>Interested in Sponsoring?</h1>
+                  <p>Ensure that 2016 is the best to date and become a sponsor.</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </section>
+       
+        <section class="speakers">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h1>Speakers</h1>
               </div>
             </div>
+          {{ range .Data.Pages }}
+            <div class="row">
+              <div class="speaker-with-bio">
+                <div class="speaker col-md-3">
+                  <div class="image-holder">
+                    <img class="background-image" alt="Speaker" src="{{.Params.speakerimage}}">
+                    <div class="hover-state text-center preserve3d">
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="speaker-description col-md-9">
+                  <h2>{{ .Title }}</h2>
+                  <span class="sub">{{ .Params.talk }}</span>
+			{{.Content}}
+                  </div>
+                </div>
+              </div>
+
           {{ end }}
+
+            </div>
+          </div>
+        </section>
+ 
+{{ partial "sponsors.html" . }}
+
         </div>
-        {{ partial "sidebar.html" . }}
-    </section>
 </main>
 
-<main>
-  {{ partial "sponsors.html" . }}
-</main>
+
 {{ partial "footer.html" . }}
