--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -582,12 +582,11 @@ Then write a lot of code.</p>
     
                 <div class="speaker-description col-md-9">
                   <h2>Cindy Sridharan</h2>
-                  <span class="sub">Hwyman, a building an origin cache for images</span>
-                  <p>At Imgix, our multitiered caching layer forms one of the most important components of our real­time image processing and delivery service.Hwyman is the origin cache that we built using Go. The talk will shed light on what necessitated the system in the first place and the architecture, the libraries we had to write ourselves such as a ragel bagel based cache control field parser, how several of the language’s inbuilt constructs, newer features (like the library introduced in 1.5 which helped us do our own dns resolutions that helped us replace nginx ‘s own resolver in the old architecture) well as the tooling were used to design, implement and test our cache filling, cache eviction and purging logic, and more interestingly, our experience ‘productionizing this’, debugging difficult to pin down goroutine and filedescriptor leaks, tuning our system to handle disparate traffic patterns, how we evaluated performance pre and post ­production, the mistakes we made, challenges we faced and lessons we learned building this.</p>
+                  <span class="sub">Building an origin cache for images</span>
+                  <p>At Imgix, our multitiered caching layer forms an important components of our real­time image processing and delivery service. This talk will shed light on what necessitated the system and the architecture, how several of the language’s inbuilt constructs, newer features (like the library introduced in 1.5 which enabled us to do our own dns resolutions that helped replace nginx‘s own resolver in the old architecture) well as the tooling were used to design, implement and test the cache filling, eviction and purging logic, and more interestingly, our experience ‘productionizing this’, tuning the system to handle disparate traffic patterns, evaluating performance pre and post production, the mistakes made, challenges faced and lessons learned building this.</p>
                   <div class="speaker-bio">
-                    <p>Cindy learned Go in the fall of 2015 and currently work at Imgix, a real time image processing and image CDN service where she uses Go to build components for their caching layer.</p>
-                    <p>In her past life she worked with Python where she remembers fixing unicode errors for the most part, and prior to that worked with C/C++, and believes Go combines the best of both worlds.</p>
-                    <p>She lives in San Francisco where you're most likely to find her at one of the many, many, many awesome meetups about the latest and greatest in technology or in a hipster coffee shop. She helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p>
+                    <p>Cindy Sridharan learned Go in the fall of 2015 and currently works at Imgix where Go is used to build components of the origin cache.</p>
+                    <p>She helped found the Women Who Go Bangalore chapter and organizes the Python Twisted and Lua meetups in San Francisco.</p>
                   </div>
                 </div>
               </div>
