--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -928,7 +928,7 @@ Then write a lot of code.</p>
 
             <div class="row">
               <div class="col-sm-12 silver-sponsors">
-                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
+                <div class="col-md-2 col-sm-2 text-center">
                   <div class="sponsor">
                     <a href="https://www.hashicorp.com/">
                       <img alt="HashiCorp" src="2016/img/sponsors/silver/hashicorp.png" style="max-width: 120px">
@@ -964,6 +964,14 @@ Then write a lot of code.</p>
                   <div class="sponsor">
                     <a href="http://www.comcast.com/">
                       <img alt="Comcast" src="2016/img/sponsors/silver/comcast.png" style="max-width: 180px; margin-top: -5px">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.yikyak.com/home/">
+                      <img alt="YikYak" src="2016/img/sponsors/silver/yikyak.png" style="">
                     </a>
                   </div>
                 </div>
