--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -879,8 +879,20 @@ Then write a lot of code.</p>
             </div>
 
             <div class="row">
+              <div class="col-sm-12 diamond-sponsors">
+                <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.google.com/">
+                      <img alt="Google" src="2016/img/sponsors/diamond/google.png">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
               <div class="col-sm-12 platinum-sponsors">
-                <div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 text-center">
+                <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 text-center">
                   <div class="sponsor">
                     <a href="http://www.twitch.tv/">
                       <img alt="Twitch" src="2016/img/sponsors/platinum/twitch.png">
@@ -892,6 +904,14 @@ Then write a lot of code.</p>
                   <div class="sponsor">
                     <a href="https://www.compose.io/">
                       <img alt="Compose" src="2016/img/sponsors/platinum/compose.png" style="margin-left: 35px;">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.verizon.com/">
+                      <img alt="Verizon" src="2016/img/sponsors/platinum/verizon.png">
                     </a>
                   </div>
                 </div>
