added guest speakers

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -118,6 +118,32 @@
               <div class="speaker-with-bio">
                 <div class="speaker col-md-3">
                   <div class="image-holder">
+                    <img class="background-image" alt="Speaker" src="2016/img/speakers/donnie-berkholz.jpg">
+                    <div class="hover-state text-center preserve3d">
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="speaker-description col-md-9">
+                  <h2>Donnie Berkholz</h2>
+                  <div class="speaker-bio">
+                    <p>Now serving as Research Director for the Development, DevOps, and IT Ops team at 451 Research.
+		    Growing 451's footprint and recognition across the entire software lifecycle.
+		    Overall responsibility for diverse areas encompassing private cloud, API management, IT monitoring, DevOps, PaaS, and more.
+		    Personal coverage includes development, testing, and release engineering ‹ including languages and language tooling, version control, CI/CD, ALM and build/deployment pipelines, and more.</p>
+		    <p>Previously at RedMonk, the only developer-focused analyst firm, with significant involvement in publication, consults, multimedia products, data-driven research, and speaking engagements.
+		    Expert in analysis, visualization, and communication of large, complex problems and datasets as a Ph.D.-trained scientist with &gt;10 published papers.
+		    Leader in the open-source community with deep expertise in Gentoo Linux (where I led ~250 developers) and software packaging as well as high-level programming skills (shell scripting, Python).
+		    Insightful technical writer and strong communicator with publications on LWN.net, a syndicated blog that topped 38,000 readers, and numerous prizes and recognition for scientific/technical writing and presentations.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="speaker-with-bio">
+                <div class="speaker col-md-3">
+                  <div class="image-holder">
                     <img class="background-image" alt="Speaker" src="2016/img/speakers/francesc-campoy-flores.jpg">
                     <div class="hover-state text-center preserve3d">
                     </div>
@@ -162,6 +188,33 @@
                     <p>José is a Mexican gopher who loves Open Source (https://github.com/xiam).
                     He helps coordinating the local Go users group (https://www.meetup.com/GophersMX/), works on different projects as a contractor and helps local students learn new technologies through a scholarship (https://menteslibres.io/).</p>
                     <p>The most popular Open Source project he has contributed to is Lantern (https://getlantern.org/). Lantern is a circumvention tool that people can use to access Internet without restrictions.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="speaker-with-bio">
+                <div class="speaker col-md-3">
+                  <div class="image-holder">
+                    <img class="background-image" alt="Speaker" src="2016/img/speakers/adrian-cockcroft.jpg">
+                    <div class="hover-state text-center preserve3d">
+                    </div>
+                  </div>
+                </div>
+    
+                <div class="speaker-description col-md-9">
+                  <h2>Adrian Cockcroft</h2>
+                  <div class="speaker-bio">
+                    <p>Adrian Cockcroft has had a long career working at the leading edge of technology.
+		    He’s always been fascinated by what comes next, and he writes and speaks extensively on a range of subjects.
+		    At Battery, he advises the firm and its portfolio companies about technology issues and also assists with deal sourcing and due diligence.</p>
+		    <p>Before joining Battery, Adrian helped lead Netflix’s migration to a large scale, highly available public-cloud architecture and the open sourcing of the cloud-native NetflixOSS platform.
+		    Prior to that at Netflix he managed a team working on personalization algorithms and service-oriented refactoring.</p>
+		    <p>Adrian was a founding member of eBay Research Labs, developing advanced mobile applications and even building his own homebrew phone, years before iPhone and Android launched.
+		    As a distinguished engineer at Sun Microsystems he wrote the best-selling “Sun Performance and Tuning” book and was chief architect for High Performance Technical Computing.</p>
+		    <p>He graduated from The City University, London with a Bsc in Applied Physics and Electronics, and was named one of the top leaders in Cloud Computing in 2011 and 2012 by SearchCloudComputing magazine.
+		    He can usually be found on Twitter <a href="https://twitter.com/adrianco">@adrianco</a>.</p>
                   </div>
                 </div>
               </div>
