--- a/themes/gophercon/layouts/speakers/single.html
+++ b/themes/gophercon/layouts/speakers/single.html
@@ -26,7 +26,7 @@
                         <a href="{{.}}"><i class="fa fa-linkedin"></i></a>
                         {{ end }}
 		</div> 
-		  <span class="sub">{{.Params.talk}}</span>
+		<span class="sub"><a href="/sessions/{{.Params.session}}">{{.Params.talk}}</a></span>
 		  {{.Content}}
                   </div>
 
