--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -1,73 +1,15 @@
-<nav id="top-nav" class="navbar navbar-default navbar-fixed-top">
-  <div class="row colors">
-    <div class="col-md-2 animated slideInDown"></div>
-      <div class="col-md-2 animated slideInDown"></div>
-      <div class="col-md-2 animated slideInDown"></div>
-      <div class="col-md-2 animated slideInDown"></div>
-      <div class="col-md-2 animated slideInDown"></div>
-      <div class="col-md-2 animated slideInDown"></div>
-  </div>
-  <div class="container">
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#"></a>
+      <a class="navbar-brand" href="/">
+        <img alt="GopherCon" src="/images/cowboy-color.png">
+      </a>
     </div>
-
-    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">ABOUT <span class="caret"></span></a>
-		  <ul class="dropdown-menu" role="menu">
-            <li><a href="/location">Location</a></li>
-            <li><a href="/about">About GopherCon</a></li>
-            <li><a href="/code-of-conduct">Code of Conduct</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SPONSORS <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/sponsors">GopherCon Sponsors</a></li>
-            <li><a href="/Gophercon2015Prospectus.pdf">Sponsorship Prospectus</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">SCHEDULE <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/#schedule-at-a-glance">Schedule At A Glance</a></li>
-            <li><a href="/#workshop-schedule">Workshops</a></li>
-            <li><a href="/#keynotes">Keynotes</a></li>
-			<li><a href="/speakers">Speakers</a></li>
-			<li><a href="/talks">Talks</a></li>
-			<li><a href="/schedule/7july">July 7th Workshops</a></li>
-			<li><a href="/schedule/8july">July 8th Day 1</a></li>
-			<li><a href="/schedule/9july">July 9th Day 2</a></li>
-			<li><a href="/schedule/10july">July 10th Hack Day</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">EVENTS <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="http://www.meetup.com/Denver-Go-Language-User-Group/events/222335594/">Kickoff Party</a></li>
-            <li><a href="/events/after-party">After Party</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">REGISTRATION <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="https://ti.to/gophercon/gophercon-2015">Book Tickets</a></li>
-            <li><a href="/#hotels">Hotels</a></li>
-          </ul>
-        </li>
-        <!--<li><a href="/2015/schedule">SCHEDULE</a></li> -->
-        <li class="dropdown">
-          <a href="/news">NEWS</a>
-        </li>
+      <ul class="nav navbar-nav navbar-right">
+	<li><a href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
+        <li><a href="/code-of-conduct">Code of Conduct</a></li>
+        <li><a href="/speakers">Speakers</a></li>
+        <li><a href="/sessions">Sessions</a></li>
       </ul>
-    </div>
   </div>
 </nav>
