link to nothing

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -226,7 +226,7 @@
                   </p>
 
 									<div class="hotel-link text-link">
-                    <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20160707/index.jhtml">Sold Out!</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
