adding sponsor pages and logos

--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -10,6 +10,7 @@
         <li><a href="/code-of-conduct">Code of Conduct</a></li>
         <li><a href="/speakers">Speakers</a></li>
         <li><a href="/sessions">Sessions</a></li>
+        <li><a href="/sponsors">Sponsors</a></li>
       </ul>
   </div>
 </nav>
