add intel, linkedin and netflix as bronze sponsors

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -100,10 +100,34 @@
 
             <div class="row">
               <div class="col-sm-12 bronze-sponsors">
-                <div class="col-md-1 col-md-offset-5 col-sm-1 col-sm-offset-5 text-center">
+                <div class="col-md-1 col-md-offset-3 col-sm-1 col-sm-offset-3 text-center" style="margin-left: 28%">
                   <div class="sponsor">
                     <a href="https://www.docker.com/">
                       <img alt="Docker" src="/2016/img/sponsors/bronze/docker.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.netflix.com/">
+                      <img alt="Netflix" src="/2016/img/sponsors/bronze/netflix.png" style="margin-left: -8px">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.intel.com/">
+                      <img alt="Intel" src="/2016/img/sponsors/bronze/intel.png" style="max-height: 40px">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.linkedin.com/">
+                      <img alt="LinkedIn" src="/2016/img/sponsors/bronze/linkedin.png" style="margin-left: -5px">
                     </a>
                   </div>
                 </div>
