--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -292,160 +292,6 @@
 					</div>
 				</section>
 
-        <section class="sponsors">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 text-center">
-                <h1>Proudly sponsored by</h1>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 diamond-sponsors">
-                <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 text-center">
-                  <div class="sponsor">
-                    <a href="http://www.google.com/">
-                      <img alt="Google" src="2016/img/sponsors/diamond/google.png">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 platinum-sponsors">
-                <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 text-center">
-                  <div class="sponsor">
-                    <a href="http://www.twitch.tv/">
-                      <img alt="Twitch" src="2016/img/sponsors/platinum/twitch.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.compose.io/">
-                      <img alt="Compose" src="2016/img/sponsors/platinum/compose.png" style="margin-left: 35px;">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.verizon.com/">
-                      <img alt="Verizon" src="2016/img/sponsors/platinum/verizon.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.ardanlabs.com/">
-                      <img alt="Ardan labs" src="2016/img/sponsors/platinum/ardan.png">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 gold-sponsors">
-                <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.minio.io/">
-                      <img alt="Minio" src="2016/img/sponsors/gold/minio.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.datadoghq.com/">
-                      <img alt="Datadog" src="2016/img/sponsors/gold/datadog.png">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 silver-sponsors">
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.hashicorp.com/">
-                      <img alt="HashiCorp" src="2016/img/sponsors/silver/hashicorp.png" style="max-width: 120px">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.heroku.com/">
-                      <img alt="Heroku" src="2016/img/sponsors/silver/heroku.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://influxdata.com/">
-                      <img alt="InfluxDB" src="2016/img/sponsors/silver/influx.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="http://www.iron.io/">
-                      <img alt="IronIO" src="2016/img/sponsors/silver/ironio.png" style="margin-top: -10px; max-width: 85px;">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="http://www.comcast.com/">
-                      <img alt="Comcast" src="2016/img/sponsors/silver/comcast.png" style="max-width: 180px; margin-top: -5px">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-2 col-sm-2 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.yikyak.com/home/">
-                      <img alt="YikYak" src="2016/img/sponsors/silver/yikyak.png" style="">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 bronze-sponsors">
-                <div class="col-md-1 col-md-offset-5 col-sm-1 col-sm-offset-5 text-center">
-                  <div class="sponsor">
-                    <a href="https://www.docker.com/">
-                      <img alt="Docker" src="2016/img/sponsors/bronze/docker.png">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="col-md-1 col-sm-1 text-center">
-                  <div class="sponsor">
-                    <a href="http://www.crowdstrike.com/">
-                      <img alt="CrowdStrike" src="2016/img/sponsors/bronze/crowdstrike.png">
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-sm-12 text-center">
-                <span>Interested in becoming a sponsor? <a href="/Gophercon2016Prospectus.pdf">Get in touch</a></span>
-              </div>
-            </div>
-          </div>
-        </section>
+        {{ partial "sponsors.html" . }}
       </div>
   {{ partial "footer.html" . }}
