add coreos, voleon, and backtrace as gold sponsors

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -7,6 +7,15 @@
             </div>
 
             <div class="row">
+              <div class="col-sm-12 diamond-sponsors">
+                <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.google.com/">
+                      <img alt="Google" src="2016/img/sponsors/diamond/google.png">
+                    </a>
+                  </div>
+                </div>
+              </div>
               <div class="col-sm-12 platinum-sponsors">
                 <div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 text-center">
                   <div class="sponsor">
@@ -36,7 +45,7 @@
 
             <div class="row">
               <div class="col-sm-12 gold-sponsors">
-                <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-4 text-center">
+                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
                   <div class="sponsor">
                     <a href="https://www.minio.io/">
                       <img alt="Minio" src="/2016/img/sponsors/gold/minio.png">
@@ -48,6 +57,30 @@
                   <div class="sponsor">
                     <a href="https://www.datadoghq.com/">
                       <img alt="Datadog" src="/2016/img/sponsors/gold/datadog.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://backtrace.io/">
+                      <img alt="Backtrace" src="/2016/img/sponsors/gold/backtrace.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://coreos.com/">
+                      <img alt="CoreOS" src="/2016/img/sponsors/gold/coreos.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://voleon.com/">
+                      <img alt="The Voleon Group" src="/2016/img/sponsors/gold/voleon.png">
                     </a>
                   </div>
                 </div>
