homewood suites sold out

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -252,7 +252,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-20160707/index.jhtml">Book Now</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
