add pivotal and apcera as sponors, add back missing verizon and yikyak logos

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -17,7 +17,7 @@
                 </div>
               </div>
               <div class="col-sm-12 platinum-sponsors">
-                <div class="col-md-2 col-md-offset-3 col-sm-2 col-sm-offset-3 text-center">
+                <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 text-center">
                   <div class="sponsor">
                     <a href="http://www.twitch.tv/">
                       <img alt="Twitch" src="/2016/img/sponsors/platinum/twitch.png">
@@ -29,6 +29,14 @@
                   <div class="sponsor">
                     <a href="https://www.compose.io/">
                       <img alt="Compose" src="/2016/img/sponsors/platinum/compose.png" style="margin-left: 35px;">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.verizon.com/">
+                      <img alt="Verizon" src="2016/img/sponsors/platinum/verizon.png">
                     </a>
                   </div>
                 </div>
@@ -73,6 +81,14 @@
                   <div class="sponsor">
                     <a href="http://voleon.com/">
                       <img alt="The Voleon Group" src="/2016/img/sponsors/gold/voleon.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://pivotal.io/">
+                      <img alt="Pivotal" src="/2016/img/sponsors/gold/pivotal.png">
                     </a>
                   </div>
                 </div>
@@ -122,6 +138,17 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-sm-12 gold-sponsors">
+                <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.yikyak.com/home/">
+                      <img alt="YikYak" src="2016/img/sponsors/silver/yikyak.png" style="">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="row">
               <div class="col-sm-12 bronze-sponsors">
@@ -161,6 +188,14 @@
                   <div class="sponsor">
                     <a href="http://www.crowdstrike.com/">
                       <img alt="CrowdStrike" src="/2016/img/sponsors/bronze/crowdstrike.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.apcera.com/">
+                      <img alt="Apcera" src="/2016/img/sponsors/bronze/apcera.png">
                     </a>
                   </div>
                 </div>
