add convox as sponsor

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -152,7 +152,7 @@
 
             <div class="row">
               <div class="col-sm-12 bronze-sponsors">
-                <div class="col-md-1 col-md-offset-3 col-sm-1 col-sm-offset-3 text-center" style="margin-left: 28%">
+                <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1 text-center" style="margin-left: 20%">
                   <div class="sponsor">
                     <a href="https://www.docker.com/">
                       <img alt="Docker" src="/2016/img/sponsors/bronze/docker.png">
@@ -196,6 +196,14 @@
                   <div class="sponsor">
                     <a href="http://www.apcera.com/">
                       <img alt="Apcera" src="/2016/img/sponsors/bronze/apcera.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
+                    <a href="https://convox.com/">
+                      <img alt="Convox" src="/2016/img/sponsors/bronze/convox.png">
                     </a>
                   </div>
                 </div>
