--- a/themes/gophercon/layouts/partials/header.html
+++ b/themes/gophercon/layouts/partials/header.html
@@ -9,6 +9,7 @@
         <link href="/2016/css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="/2016/css/theme-gophercon.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="/2016/font/styles.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="/2016/css/main.css" rel="stylesheet" type="text/css" media="all"/>       
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     </head>
 				
